[tool.poetry]
name = "leetcode-solutions"
version = "0.1.0"
description = ""
authors = ["Eren-Ajani Tshimanga <eren.tish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
